Added test case for forgot passsword and payment
